@@ -1,6 +1,9 @@
 # ChangeLog for dev-perl/Config-Simple
 # Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Config-Simple/ChangeLog,v 1.19 2008/05/12 16:09:02 ian Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Config-Simple/ChangeLog,v 1.20 2008/06/06 06:02:10 corsair Exp $
+
+  06 Jun 2008; Markus Rothe <corsair@gentoo.org> Config-Simple-4.59.ebuild:
+  Added ~ppc64; bug #225061
 
 *Config-Simple-4.59 (12 May 2008)
 
